# Python-Projects

./: .gitignore  README.md  autolog_timesheet.py  choose_stock.py  coldbar.py  eat_with_shelly.py  scrape_realtor.py
CppPython/: CMakeLists.txt  main.cpp
database/: sqlite3_test.py
realtor/: mongohouse_data.py
stock/: choose_stock.py
stock/src/: choose_stock.py  sample.py
